--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,7 +38,7 @@
 
   <div class="form-group">
     <label for="bu">Burger Name:</label>
-    <input type="text" id="bu" name="name">
+    <input type="text" id="bu" name="name" required="required">
   </div>
 
   <div class="form-group">
